# realmate-challenge

./: README.md  docker-compose.yml
realmate-frontend/: .env-example  Dockerfile  README.md  package-lock.json  package.json
realmate-frontend/src/: App.js  api.js  index.css
realmate-frontend/src/pages/: Conversations.js
realmate_challenge_back/: Dockerfile  pyproject.toml
realmate_challenge_back/chat/: models.py  serializers.py  urls.py  views.py
realmate_challenge_back/chat/migrations/: 0001_initial.py  0002_alter_conversation_id.py
realmate_challenge_back/chat/tests/: test_views.py
realmate_challenge_back/realmate_challenge/: settings.py  urls.py
